# dp-kobi-database

./: .gitignore  .sqlfluff  README.md  alembic.ini  generate-migration-tag.sh  load-alembic-version.py  pyproject.toml  run-tests.sh
.github/workflows/: database-migrations.yml
dp_kobi_database/: models.py
dp_kobi_database/flufflib/: params.py
dp_kobi_database/migrations/: datasets.sql  env.py
dp_kobi_database/migrations/versions/: V20220803T2143_create_initial_tables.py  V20220809T2156_team_and_player_stats_tables.py  a394a9f52463_.py
dp_kobi_database/schema_initialization_sql/: schemas.sql
scripts/: generate-migration-tag.sh  initialize_datasets.py  upgrade-database.py
sql_migrations/: V20220803T2143.json  V20220803T2143.sql  V20220809T2156.json  V20220809T2156.sql
tests/: test_dp_kobi_database.py
