[tool.poetry]
name = "dp-kobi-database"
version = "0.1.0"
description = ""
authors = ["Kobi <harold.rockata@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
SQLAlchemy = ">=1.2.0,<=1.4.27"
alembic = "^1.8.1"
google-cloud = "^0.34.0"
sqlalchemy-bigquery = "^1.4.4"
python-bigquery-validator = "^0.0.10"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
